// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalList /> with additional className matches its snapshot 1`] = `
<ul
  className="y-horizontalList TEST_CLASSNAME"
/>
`;

exports[`<HorizontalList /> with align "right" matches its snapshot 1`] = `
<ul
  className="y-horizontalList y-horizontalList__align-right"
/>
`;

exports[`<HorizontalList /> with child content matches its snapshot 1`] = `
<ul
  className="y-horizontalList"
>
  list content
</ul>
`;

exports[`<HorizontalList /> without props matches its snapshot 1`] = `
<ul
  className="y-horizontalList"
/>
`;
